--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.8.5</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.8.7</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -114,8 +114,19 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.8.5</h2>
+            <h2>Release Notes v0.8.7</h2>
             <div class="scroll-content">
+                <h3>v0.8.7 - The "6 7" Update 🎲</h3>
+                <ul>
+                    <li>⚖️ <strong>Balancing:</strong> Refined gift sizes and removed bouncy physics for Standard
+                        difficulty.</li>
+                    <li>🎨 <strong>Visuals:</strong> New Teal color, Orange (replacing Yellow), and polished gradients.
+                    </li>
+                    <li>👀 <strong>Camera:</strong> Smoother camera that waits for your stack to grow.</li>
+                    <li>🥚 <strong>Easter Egg:</strong> Can you find the secret in the version number? (Hint: Click it!)
+                    </li>
+                </ul>
+                <hr>
                 <h3>v0.8.5 - The "Holiday Polish" Update 🎄</h3>
                 <ul>
                     <li>🎁 <strong>First Game Bonus:</strong> New players get a cookie boost! 🍪</li>
@@ -236,7 +247,7 @@
 
         </div>
 
-        <div class="version-info">v0.8.5 by Sean O</div>
+        <div class="version-info"><span id="version-text">v0.6.7</span> by Sean O</div>
     </div>
 
     <!-- Shop Modal -->
