--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <button id="quit-game-btn" class="secondary-btn">Quit Game</button>
-            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.8.7</button>
+            <button id="release-notes-btn" class="text-link">ℹ️ Gift Stacker v0.8.8</button>
         </div>
 
         <!-- Quit Confirmation Modal -->
@@ -114,8 +114,14 @@
 
         <!-- Release Notes Modal -->
         <div id="release-notes-modal" class="modal hidden">
-            <h2>Release Notes v0.8.7</h2>
+            <h2>Release Notes v0.8.8</h2>
             <div class="scroll-content">
+                <h3>v0.8.8 - The "Security" Update 🔒</h3>
+                <ul>
+                    <li>🔒 <strong>Security:</strong> Important security updates for API protection.</li>
+                    <li>🏗️ <strong>Infrastructure:</strong> Improved configuration management.</li>
+                </ul>
+                <hr>
                 <h3>v0.8.7 - The "6 7" Update 🎲</h3>
                 <ul>
                     <li>⚖️ <strong>Balancing:</strong> Refined gift sizes and removed bouncy physics for Standard
@@ -247,7 +253,7 @@
 
         </div>
 
-        <div class="version-info"><span id="version-text">v0.6.7</span> by Sean O</div>
+        <div class="version-info"><span id="version-text">v0.8.8</span> by Sean O</div>
     </div>
 
     <!-- Shop Modal -->
