Fix: Add cache busting to firebase-config.js script tag

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
     <!-- Game Scripts -->
-    <script src="firebase-config.js"></script>
+    <script src="firebase-config.js?v=0.8.8.2"></script>
     <script src="leaderboard.js"></script>
     <!-- Removed snowSystem.js (legacy) -->
 
